Compiler/tests/good/none.nx
function foo () : int
{
    val x : int = 1;

    return 0;
}

printn(foo());
printn(foo() == foo());
printn(foo() != foo());
