Compiler/tests/bad/function5.nx
function somar(int x, int y) : int
{
    return 3;
}

function somar(int x, int y) : int
{
    return 3;
}

